<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiniWallet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="inputNewProductHint">Input product name</string>
    <string name="buyButtonText">Buy it!</string>
    <string name="priceHint">$</string>
    <string name="title_activity_purchase">PurchaseActivity</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add_category_label">New category:</string>

</resources>
