<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="200sp"
    android:minWidth="200sp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:id="@+id/linearLayout"
    tools:context="com.github.miniwallet.shopping.purchase.EditProductActivity"
    android:background="#ff5b3a4a">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/category"
            android:textSize="20sp"
            android:text="@string/add_category_label"
            android:textAlignment="gravity"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:weightSum="1"
        android:textAlignment="gravity"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/addCategoryEditText"
            android:gravity="bottom|right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/addCategoryCancel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/addCategoryOK"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:nestedScrollingEnabled="false"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>
