<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:windowSoftInputMode="adjustResize">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="#ffc62828"
                android:textSize="30dp"
                android:text="text"
                android:singleLine="false"
                android:textAlignment="gravity"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.05"
                android:background="#ff33691e" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:focusableInTouchMode="true"
                android:focusable="false"
                android:descendantFocusability="beforeDescendants"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/editText"
                    android:layout_alignParentTop="true"
                    android:hint="@string/inputNewProductHint"
                    android:selectAllOnFocus="false"
                    android:inputType="textShortMessage"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_above="@+id/spinner" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/editText2"
                    android:hint="@string/priceHint"
                    android:minWidth="50dp"
                    android:inputType="number|numberDecimal"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:textAlignment="gravity"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/editText"
                    android:layout_above="@+id/spinner" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/button"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentBottom="false"
                    android:text="@string/buyButtonText"
                    android:textSize="15sp"

                    android:layout_alignParentRight="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/editText2"
                    android:layout_above="@+id/spinner" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:id="@+id/spinner"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:touchscreenBlocksFocus="false"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:popupBackground="#FFE082"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.05"
                android:background="#ff33691e" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/listView"
                android:layout_marginBottom="25dp"
                android:fastScrollAlwaysVisible="false"
                android:nestedScrollingEnabled="true"
                android:layout_weight="5" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
